--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="icon" href="img/icon.png" type="image/png" sizes="16x16">
+	<script src="https://kit.fontawesome.com/160820775c.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -10,7 +11,7 @@
 </head>
 <body>
 	<section class="section1">
-		<div class="container">
+		<div class="s1-container">
 			<div class="s1-box">
 				<div class="s1-box1">
 					<p> embeded youtube video goes here </p>
@@ -22,21 +23,55 @@
 		</div>
 	</section>
 	<section class="section2">
-		<div class="s2-box">
-			<div class="s2-box1">
-				<h3 class="s2-h3"> RESPONSIVE WEB DESIGN </h3>
-				<img class="s2-img1" src="img/group-10.svg" alt="s2-box1 image">
-				<p class="s2-p1"> approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation. </p>
-			</div>
-			<div class="s2-box2">
-				<h3 class="s2-h3"> APP DEVELOPMENT </h3>
-				<img class="s2-img1" src="img/path-28.svg" alt="s2-box2 image">
-				<p class="s2-p1"> Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system. </p>
-			</div>
-			
+		<div class="s2-container">
+			<h2 class="s2-h2"> FEATURED | view all featured media </h2>
+		    <div class="s2-box">
+			    <div class="s2-box1">
+				    <h3 class="s2-h3"> RESPONSIVE WEB DESIGN </h3>
+				    <div class="s2-article1">
+				        <img class="s2-img1" src="img/group-10.svg" alt="s2-box1 image">
+				        <p class="s2-p1"> approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation. </p>
+				    </div>
+				    <div class="s2-read">
+				    	<a href="#"> READ MORE </a>
+				    </div> 
+			    </div>
+			    <div class="s2-box2">
+				    <h3 class="s2-h3"> APP DEVELOPMENT </h3>
+				    <div class="s2-article2">
+				        <img class="s2-img1" src="img/path-28.svg" alt="s2-box2 image">
+				        <p class="s2-p2"> Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system. </p>
+				    </div>
+				    <div class="s2-read">
+				    	<a href="#"> READ MORE </a>
+				    </div>
+			    </div>			
+		    </div>
 		</div>
-		
 	</section>
+	<section class="section3">
+		<div class="s3-container">
+			<div class="s3-box">
+				<img class="s3-img" src="https://image.shutterstock.com/image-illustration/beautiful-aurora-universe-milky-way-260nw-1787056478.jpg" alt="s2 image1">
+				<img class="s3-img" src="https://image.shutterstock.com/image-illustration/beautiful-aurora-universe-milky-way-260nw-1787056478.jpg" alt="s2 image2">
+				<img class="s3-img" src="https://image.shutterstock.com/image-illustration/beautiful-aurora-universe-milky-way-260nw-1787056478.jpg" alt="s2 image3">
+				<img class="s3-img" src="https://image.shutterstock.com/image-illustration/beautiful-aurora-universe-milky-way-260nw-1787056478.jpg" alt="s2 image4">
+			</div>			
+		</div>
+	</section>
+
+	<footer>
+        <div class="facebook dib">
+            <a href="https://www.facebook.com/" target="tab"> 
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
+        </div>
+        <div class="divider dib"> </div>
+        <div class="youtube dib">
+            <a href="https://www.youtube.com/" target="tab">
+                <i class="fa-brands fa-youtube"></i> </a>
+        </div>
+    </footer>
 
 </body>
 </html>
